fix: se ajustan estilos para evitar overflow

--- a/vista_conocimiento/Test-Conductual/style.css
+++ b/vista_conocimiento/Test-Conductual/style.css
@@ -131,7 +131,7 @@ width: 30%;
   border: 0;
   padding: 1%;
   margin: 2%;
-  width: 40%;
+  width: 30%;
   font-size: 150%;
   border-radius: 15px;
   font-family: "Tilt Warp", sans-serif;
